Changes
=======

2.4 (unreleased)
----------------

- Nothing changed yet.


2.3 (2017-04-12)
----------------

- Better implementation of #98

- #72: Support for adding additional JS files [hbldh]

- Upgraded impress.js to 0.6.0

- Support for mathematical formulas with Mathjax [arabidopsis]

- Default template use UTF-8 [mariobodemann]

- Added support for Python 3.6

- readthedocs moved domain [adamchainz]


2.2 (2016-10-15)
----------------

- #98: Presentation not update when using gedit


2.1 (2016-02-27)
----------------

- #87: Support multiple :css: statements. [bitwalker]

- #86, #88: In-template resources failed for external templates.

- #89: The file monitoring could make the CPU go to 100%. [b6d]

- #81: positions.rst example was out of date.

- Dropped Python 3.2 support, because docutils doesn't seem to
  work on Python 3.2 any longer. With docutils 0.9 it probably
  still works.

- Updated tests to work with newer Pygments.

- #96: Relative paths was not working.

- #91: When modifying included files the presentation was not updated.


2.0 (2015-06-14)
----------------

- Better support for :class:. [fahhem]

- Now supports data-perspective. [fahhem]

- Fixed typos in template.py. [fahhem, ggtools]


2.0b1 (2014-11-27)
------------------

- IMPORTANT! The positioning has been reimplemented. The most important change
  is that there is no longer any calculation of relative movement when you use
  absolute coordinates. Therefore, if you use absolute coordinates on some slides
  and then have no coordinates on other slides, your positioning may no longer
  be correct with version 2.0.

- IMPORTANT! Moved the "note" XML transformation into the templates, as this is an
  impress.js feature, and other libraries, such as Reveal.js, will render it
  differently. If you make your own templates, you need to update them accordingly!

- Relative coordinates (starting with r) are now supported for all positioning,
  attributes including rotation and scaling.
