@@ -4,7 +4,10 @@ Changes
 2.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Removed the code that uses pkg_util to access included templates. We don't
+  support installing Hovercraft as a ZIP file anyway, so it only complicates
+  things for no good reason.
+
 
 
 2.3 (2017-04-12)
